--- a/HTML&CSS/index1.html
+++ b/HTML&CSS/index1.html
@@ -7,6 +7,28 @@
     <title>Começo</title>
 </head>
 <body>
+        <header>
+            <h1>Titulo da pagina</h1>
+        </header>
+    <section>
+        <header>
+            <h2>Titulo 2</h2>
+        </header>
+        <article>
+            <header>
+                <h3>Titulo3</h3>
+                <img src="computer.jpg" alt="Tela codigo HTML">
+            </header>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<a href="https://www.google.com/" target="_blank">Google</a>  Quo beatae libero laborum rem nostrum animi deserunt illum illo, cum dolorem, eos odit eaque tempora, nobis velit quia voluptate quis expedita. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis aspernatur vel inventore alias blanditiis amet, excepturi aperiam beatae illo ab dolorum accusamus libero, hic commodi dicta sunt sit itaque voluptas.</p>
     
+        </article>
+    </section>
+    <footer>
+            <ul>
+                <li>
+                    <a href=""
+                </li>
+            </ul>
+    </footer>
 </body>
 </html>
