--- a/HTML&CSS/index1.html
+++ b/HTML&CSS/index1.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Começo</title>
 </head>
 <body>
         <header>
-            <h1>Titulo da pagina</h1>
+            <h1 id="t1">Titulo da pagina</h1>
         </header>
     <section>
         <header>
-            <h2>Titulo 2</h2>
+            <h2 class="t2">Titulo 2</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione blanditiis eveniet quia tenetur. Eum perspiciatis nesciunt rem, sit saepe eveniet odit. Quos omnis quae fugit, cum necessitatibus blanditiis quo dolor.</p>
         </header>
         <article>
             <header>
-                <h3>Titulo3</h3>
+                <h3 class="t3">Titulo3</h3>
                 <img src="computer.jpg" alt="Tela codigo HTML">
             </header>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<a href="https://www.google.com/" target="_blank">Google</a>  Quo beatae libero laborum rem nostrum animi deserunt illum illo, cum dolorem, eos odit eaque tempora, nobis velit quia voluptate quis expedita. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis aspernatur vel inventore alias blanditiis amet, excepturi aperiam beatae illo ab dolorum accusamus libero, hic commodi dicta sunt sit itaque voluptas.</p>
@@ -26,7 +28,7 @@
     <footer>
             <ul>
                 <li>
-                    <a href=""
+                    <a href="https://github.com/JefAlmeida1" target="_blank">GitHub</a>
                 </li>
             </ul>
     </footer>
