prática de exercicio

--- a/HTML&CSS/index1.html
+++ b/HTML&CSS/index1.html
@@ -16,10 +16,10 @@
             <h2 class="t2">Titulo 2</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione blanditiis eveniet quia tenetur. Eum perspiciatis nesciunt rem, sit saepe eveniet odit. Quos omnis quae fugit, cum necessitatibus blanditiis quo dolor.</p>
         </header>
-        <article>
+        <article class="ar1">
             <header>
                 <h3 class="t3">Titulo3</h3>
-                <img src="computer.jpg" alt="Tela codigo HTML">
+                <img class="im1" src="computer.jpg" alt="Tela codigo HTML">
             </header>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<a href="https://www.google.com/" target="_blank">Google</a>  Quo beatae libero laborum rem nostrum animi deserunt illum illo, cum dolorem, eos odit eaque tempora, nobis velit quia voluptate quis expedita. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis aspernatur vel inventore alias blanditiis amet, excepturi aperiam beatae illo ab dolorum accusamus libero, hic commodi dicta sunt sit itaque voluptas.</p>
     
