--- a/HTML&CSS/Desafio insta/insta.html
+++ b/HTML&CSS/Desafio insta/insta.html
@@ -12,7 +12,7 @@
 
 </header>
 <body>
-    <div class="isntagram-wrapper">
+    <div class="instagram-wrapper">
         <div class="instagram-phone">
             <img src="tela1.PNG" alt="celular">
         </div>
