modificações de estilo

--- a/HTML&CSS/Desafio insta/insta.html
+++ b/HTML&CSS/Desafio insta/insta.html
@@ -27,8 +27,8 @@
             <a href="#" class="instagram logout">Remover conta</a>
         </div>
         <div class="group">
-            <p class="not-accoun">Não é terra?</p>
-            <p class="notaccount"></p>
+            <p class="not-account">Não é terra?</p>
+            <p class="not-account"></p>
             <span class="link-blue">Alterar contas</span>
             ou 
             <span class="link-blue">Inscreva-se</span>
