--- a/Projeto reciando interface do netflix/net.html
+++ b/Projeto reciando interface do netflix/net.html
@@ -28,15 +28,19 @@
                     Rick é um velho mentalmente desequilibrado, mas cientificamente talentoso que se reconectou recentemente com sua família. Ele passa a maior parte do tempo envolvendo o jovem neto Morty em aventuras perigosas e estranhas no espaço e em universos alternativos. Compostos à vida familiar já instável de Morty, esses eventos causam muito sofrimento a Morty em casa e na escola.</p>
             </div>
             <div class="botoes">
+                
                 <button role='button' class="botao">
+                    <i class="fas fa-play"></i>
                     Assistir Agora
                 </button>
                 <button role='button' class="botao">
+                    <i class="fas fa-info"></i>
                     Mais Informaições
                 </button>
             </div>
             
         </div>
     </main>
+    <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
 </body>
 </html>
