--- a/Projeto reciando interface do netflix/net.html
+++ b/Projeto reciando interface do netflix/net.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="netflix.js"></script>
+    <link rel="stylesheet" href="Style/owl.carousel.min.css">
+    <link rel="stylesheet" href="Style/owl.theme.default.min.css">
+    <link rel="stylesheet" href="respo.css">
     <title>Exemplo Netflix</title>
 </head>
 <body>
@@ -41,6 +43,45 @@
             
         </div>
     </main>
+    <div class="carrosel-filmes">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="imagem/min1.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="imagem/min2.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="imagem/min3.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="imagem/min4.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="imagem/min5.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="imagem/min6.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="imagem/min7.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="imagem/min8.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="imagem/min9.jpg" alt="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="imagem/min10.jpg" alt="">
+            </div>
+        </div>
+    </div>
+    
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
+    <script src="javascript/jquery.min.js"></script>
+    <script src="javascript/owl.carousel.min.js"></script>
+    <script src="netflix.js"></script>
+
 </body>
 </html>
