--- a/HTML&CSS/trabalhando com bootstrap/bot.html
+++ b/HTML&CSS/trabalhando com bootstrap/bot.html
@@ -11,21 +11,66 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Navbar
-            <img src="imagem/global.jpg" alt="">
+            <img src="imagem/global.jpg" alt="" width="200" height="80">
         </a>
         <div class="collapse navbar-collapse" >
         <ul class="navbar-nav">
-            <li>
-                <a class="nav-link" href="#">Quem somos</a>
+            <li class="nav-item">
+                <a class="nav-link" href="#quesomos">Quem somos</a>
             </li>
-            <li>
-                <a class="nav-link" href="#">Parceiros</a>
+            <li class="nav-item">
+                <a class="nav-link" href="#parceiros">Parceiros</a>
             </li>
-            <li>
-                <a class="nav-link" href="#">Serviços</a>
+            <li class="nav-item">
+                <a class="nav-link" href="#serviços">Serviços</a>
             </li>
         </ul>
         </div>
     </nav>
+    <section id="quemsomos">
+        <div class="container-fluid quem-somos text-center margin">
+            <h3>Quem somos</h3>
+            <img src="imagem/time.jpg" alt="" class="rounded-circle" width="400" height="400">
+            <h3>Somos um time comprometido</h3>
+        </div>
+    </section>
+    <section dir="parceiros">
+        <div class="container-fluid text-center margin parceiros">
+        <h3 class="margin">Parceiros</h3>
+        <div class="container">      
+        <div class="row">        
+        <div class="col-lg-4">
+            <img src="imagem/diooo.png" alt="" width="100%">
+        </div>
+        <div class="col-lg-4">
+            <img src="imagem/diooo.png" alt="" width="100%">
+        </div>
+        <div class="col-lg-4">
+            <img src="imagem/diooo.png" alt="" width="100%">
+        </div>
+        </div>
+        </div>
+        </div>
+    </section>
+    <section id="serviços">
+        <div class="container-fluid text-center margin serviços">
+            <h3 class="margin">Serviços</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, odio tenetur distinctio nihil deleniti cum consequatur facilis in fugit doloremque voluptate at modi, quae iste blanditiis, enim soluta vel repudiandae?</p>
+                        <img src="imagem/1.jpg" alt="" width="100%">
+                    </div>
+                    <div class="col-lg-6">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium neque velit necessitatibus facere, quisquam atque illo deserunt vel quas, a eaque possimus quod alias, sapiente blanditiis eligendi modi aliquam quae.</p>
+                        <img src="imagem/3.jpg" alt="" width="100%">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p class="container-fluid bg-footer">Desenvolvido por Senhor Jovem</p>
+    </footer>
 </body>
 </html>
