--- a/JavaScript/jQuery e Ajax/index.html
+++ b/JavaScript/jQuery e Ajax/index.html
@@ -9,6 +9,7 @@
     <title>Apredendo jQuery e ajax</title>
 </head>
 <body>
+    <input type="text" id="cep">
     <button type="button" onclick="consultacep()">Clique aqui</button>
 </body>
 </html>
