--- a/JavaScript/jQuery e Ajax/index.html
+++ b/JavaScript/jQuery e Ajax/index.html
@@ -9,7 +9,11 @@
     <title>Apredendo jQuery e ajax</title>
 </head>
 <body>
-    <input type="text" id="cep">
+    Digite o cep: <input type="text" id="cep">
     <button type="button" onclick="consultacep()">Clique aqui</button>
+    <p id="logradouro"></p>
+    <p id="bairro"></p>
+    <p id="localidade"></p>
+    <p id="uf"></p>
 </body>
 </html>
