--- a/JavaScript/jQuery e Ajax/index.html
+++ b/JavaScript/jQuery e Ajax/index.html
@@ -14,10 +14,37 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">CEP</a>
             <div class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control me-2" type="search" placeholder="CEP" id="cep">
                 <button class="btn btn-outline-success" onclick="consultacep()">Buscar</button>
             </div>
           </div>
       </nav>
+      <div class="container">
+        <div class="row">
+            <h3>Cep</h3>
+        </div>
+        <div class="row">
+            <table class="table">
+                <tbody>
+                    <tr>
+                        <td>Logradouro</td>
+                        <td id="logradouro"></td>
+                    </tr>
+                    <tr>
+                        <td>Bairro</td>
+                        <td id="bairro"></td>
+                    </tr>
+                    <tr>
+                        <td>Localidade</td>
+                        <td id="localidade"></td>
+                    </tr>
+                    <tr>
+                        <td>UF</td>
+                        <td id="uf"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+      </div>
 </body>
 </html>
