--- a/JavaScript/jQuery e Ajax/index.html
+++ b/JavaScript/jQuery e Ajax/index.html
@@ -21,7 +21,7 @@
       </nav>
       <div class="container">
         <div class="row">
-            <h3>Cep</h3>
+            <h3 id="consulta-cep">Cep</h3>
         </div>
         <div class="row">
             <table class="table">
