--- a/JavaScript/jQuery e Ajax/index.html
+++ b/JavaScript/jQuery e Ajax/index.html
@@ -24,7 +24,7 @@
             <h3 id="consulta-cep">Cep</h3>
         </div>
         <div class="row">
-            <table class="table">
+            <table class="table table table-dark table-striped">
                 <tbody>
                     <tr>
                         <td>Logradouro</td>
