--- a/JavaScript/Jogo Nave/index.html
+++ b/JavaScript/Jogo Nave/index.html
@@ -13,7 +13,7 @@
         <div id="fundogame">
             <div id="inicio">
                 <h1>Resgate</h1>
-                    <p>A tecla W para movimentar para cima, a tecla S para movimentar para baixo.</p>
+                    <p>A tecla W para movimentar para cima, a tecla S para movimentar para baixo, tecla D para atirar.</p>
                     <p>Clique aqui para iniciar!</p>
             </div>
         </div>
