--- a/JavaScript/Space Shhoter/index.html
+++ b/JavaScript/Space Shhoter/index.html
@@ -10,6 +10,12 @@
 <body>
     <div id="main-play-area">
         <img class="player-shhoter" src="img/hero.png" alt="hero">
+        <h4 class="game-instructions">
+            Não deixe os inimigos se aproximarem!
+        </h4>
+        <div class="start-button">
+            Start
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
