--- a/JavaScript/Aulas de javascript/Introdução/aula4/index.html
+++ b/JavaScript/Aulas de javascript/Introdução/aula4/index.html
@@ -9,6 +9,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae minus molestias dolore eaque tenetur voluptatum! Consequuntur, incidunt dignissimos quaerat quae numquam eius id impedit facilis, amet illo enim libero expedita.
 </body>
 </html>
