--- a/JavaScript/Aulas de javascript/Introdução/aula5/index.html
+++ b/JavaScript/Aulas de javascript/Introdução/aula5/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,5 +10,13 @@
     Veja o exemplo de como funciona o Dom em javascript.
 
    <p> <img src="Dom.JPG" alt="Dom"> </p>
+
+   <h1>Contador</h1>
+   <p>Clique nos botões para fazer a contagem</p>
+    <div>
+        <button  onclick="sub()">-</button>
+        <span id="numero">0</span>
+        <button  onclick="increment()">+</button>
+    </div>
 </body>
 </html>
