--- a/JavaScript/aulas de javascript/aula3/funções.html
+++ b/JavaScript/aulas de javascript/aula3/funções.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="funções.js"></script>
-    <title>Funções  Java</title>
+    <title>Funções  Javascript</title>
 </head>
 <body>
     <h1>Trabalhando com funções no javascript.</h1>
