--- a/JavaScript/Jogo Genius/index.html
+++ b/JavaScript/Jogo Genius/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="main-game">
         <div class="genius">
-            <div class="blue"></div>
-            <div class="yellow"></div>
-            <div class="red"></div>
-            <div class="green"></div>
+            <div class="blue"></div> <br>
+            <div class="yellow"></div> <br>
+            <div class="red"></div> <br>
+            <div class="green"></div> <br>
         </div>
     </div>
     <script src="script.js"></script>
